{
    "name": "XRInput",
    "maps": [
        {
            "name": "Default",
            "id": "48d61ad7-6c65-4572-b487-96c3860937c6",
            "actions": [
                {
                    "name": "LPrimary2DAxis",
                    "type": "Value",
                    "id": "94bfa243-3ecf-4176-bc16-a5cf72e4637c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RPrimary2DAxis",
                    "type": "Value",
                    "id": "44f502b5-90b7-449c-9a13-543310a7c89d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LTrigger",
                    "type": "Value",
                    "id": "f872b433-02f2-424a-8964-2d8d68fbc79d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RTrigger",
                    "type": "Value",
                    "id": "4c906ceb-7ac3-4fce-b00c-c0b69eae5a2d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LGrip",
                    "type": "Value",
                    "id": "33eb5ca5-0df1-4213-877d-54580fce1c6b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RGrip",
                    "type": "Value",
                    "id": "3acc7530-53c6-4d8d-b3b5-83fe72f29e1f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LPrimaryButton",
                    "type": "Button",
                    "id": "b2927747-8369-4655-99dd-bc5c5ab4829a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RPrimaryButton",
                    "type": "Button",
                    "id": "c538cdb7-dc06-4de0-bb81-76c97b610f97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LPrimaryTouch",
                    "type": "Button",
                    "id": "3212f5a2-eeaa-4aab-88c4-fa403e6fb829",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RPrimaryTouch",
                    "type": "Button",
                    "id": "1a7b01e5-6287-4c58-a17a-07e8b30e2de2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LSecondaryButton",
                    "type": "Button",
                    "id": "91e63fbf-5b1d-42be-80f2-98a9fd95a1f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RSecondaryButton",
                    "type": "Button",
                    "id": "81f53cf6-3d77-45a6-82ec-7e21106a97b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LSecondaryTouch",
                    "type": "Button",
                    "id": "bfb4c645-857c-451c-b0df-d8f43e84993a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RSecondaryTouch",
                    "type": "Button",
                    "id": "690780b6-c773-465e-ac62-f23921148e41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LGripButton",
                    "type": "Button",
                    "id": "33494b62-0cfe-491e-b79d-eb84a86cac36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RGripButton",
                    "type": "Button",
                    "id": "e9dbc432-491d-44d3-9680-61d67746e375",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LTriggerButton",
                    "type": "Button",
                    "id": "ad0e3d8a-c79c-4a33-bf81-b5e686a91c73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RTriggerButton",
                    "type": "Button",
                    "id": "7681bb00-dbdf-48fb-9dae-5b2cd3d89b75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LPrimary2DAxisClick",
                    "type": "Button",
                    "id": "1f39b585-756c-44b7-b206-a2f42baaa15f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RPrimary2DAxisClick",
                    "type": "Button",
                    "id": "bf82ea17-47c3-43f0-836c-1ab557f30e69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LPrimary2DAxisTouch",
                    "type": "Button",
                    "id": "52c272c6-4439-4945-b7c0-612f995b72cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RPrimary2DAxisTouch",
                    "type": "Button",
                    "id": "d95ed779-b698-447f-917b-8fca64b11ee3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "ea062761-b0a7-453e-9301-79f31b7dff2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08435561-c121-4408-a71f-40b18da4c133",
                    "path": "<XRController>{LeftHand}/{PrimaryTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LPrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "609a2fb2-46d7-4b48-b66d-adcd32b0c098",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c3e9761-8c9f-4e12-96f5-9ddec59012fe",
                    "path": "<XRController>{LeftHand}/{SecondaryTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LSecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3414a11-3338-462b-8b4e-581b7426db07",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LGripButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "202b1f18-3892-454a-a635-02bbd878f808",
                    "path": "<XRController>{LeftHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LTriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d76e5d18-9b7a-4791-8f26-a2623cf57126",
                    "path": "<XRController>{LeftHand}/primary2DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LPrimary2DAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca7b8bf7-3f36-47ce-b78c-e481d7f103d6",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b5cb8fa-983c-44a7-80b5-010618563bc5",
                    "path": "<XRController>{LeftHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a5a366d-c7dc-4009-b6d6-0644ddba8f52",
                    "path": "<XRController>{LeftHand}/{Grip}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f050618-66b0-4ecf-bb7e-5478038ed152",
                    "path": "<XRController>{LeftHand}/{Primary2DAxisClick}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LPrimary2DAxisClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc70e22f-034e-46fa-b9bf-df3475174bc0",
                    "path": "<XRController>{LeftHand}/{Primary2DAxisTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LPrimary2DAxisTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b4819b3-8f05-4731-8c02-20587a54b6b9",
                    "path": "<XRController>{RightHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RPrimary2DAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d364b6d8-20ea-4e67-83e6-75952cdfd908",
                    "path": "<XRController>{RightHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e36e0533-0b5f-4f79-8fba-63c2b3a8f073",
                    "path": "<XRController>{RightHand}/{Grip}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e2de232-f677-4cba-9184-4437ecfd7bea",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ec24028-5143-4e32-a4cf-42402317bacd",
                    "path": "<XRController>{RightHand}/{PrimaryTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RPrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb1fb5f1-06d1-4dd2-ba6f-2640952418fd",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3def32e0-5681-451e-8016-665246b75af1",
                    "path": "<XRController>{RightHand}/{SecondaryTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RSecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52b6ffaa-0cd0-4b3c-9ff6-fd8a6ea70a43",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RGripButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d61347a-b807-4145-ab7c-8be0059246a9",
                    "path": "<XRController>{RightHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RTriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f940b633-8875-493c-9aa8-91e4df9111fd",
                    "path": "<XRController>{RightHand}/{Primary2DAxisClick}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RPrimary2DAxisClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b095924d-c340-4717-a3b3-7a9939501188",
                    "path": "<XRController>{RightHand}/{Primary2DAxisTouch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RPrimary2DAxisTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcfa9f5a-ff59-4f3b-8ceb-75ad65d4aedf",
                    "path": "<XRController>{LeftHand}/{MenuButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}